fixed mion bug: stuck remaining count on deletion
remaining task item count wouold have been stuck when a task item is
deleted. now it is fixed

some css styling for todobox is added

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -194,8 +194,18 @@ hr {
   width: auto;
   display: none;
   cursor: pointer;
+  border-radius: 10px;
+}
+
+.taskDelBtn:hover {
+  transform: scale(1.3);
+  transition: 100ms;
 }
 
 .taskItem:hover > img {
   display: inline;
+}
+
+.taskItem:hover {
+  background: rgb(240, 240, 240);
 }
